# Caronte

./: CHANGELOG  Caronte - DOC - ES.odt  INSTALL  README.md  README.txt  TODO  api.txt  manage.py  nomenclature.txt  protocol  protocol.txt  sqlite3.db  test_results.txt
caronte/: common.py  settings.py  urls.py  wsgi.py
caronte_client/C/: CMakeLists.txt  Makefile  base64.c  base64.h  cJSON.c  caronte_client.c  caronte_client.h  caronte_security.c  caronte_security.h  client_sample  hashmap.c  hashmap.h  http_client.c  http_client.h  sample.c  utils.c  utils.h
caronte_client/CPP/: caronte_client.c  caronte_client.h  caronte_security.c  caronte_security.h
caronte_client/java/: Sample.java
caronte_client/java/org/caronte/: CaronteClient.java  CaronteSecurity.java
caronte_client/javascript/: caronte_client.js  caronte_client_sync.js  caronte_security.js
caronte_client/javascript/libs/: CryptoJS_byteArrayWordArrayConversions.js
caronte_client/javascript/libs/cryptojs/: CryptoJS_utils.js
caronte_client/python/: caronte_client.py  caronte_security.py  sample.py
caronte_client/web_sample/: index.html
caronte_client/web_sample/css/: custom-styles.css  open-sans.css
caronte_client/web_sample/js/: script.js
caronte_client/web_sample/pages/: login.html  main.html  register.html
caronte_server/: models.py  views.py
caronte_server/migrations/: 0001_initial.py  0002_user_iv.py  0003_auto_20190315_1317.py  0004_user_login_type.py  0005_auto_20190320_1527.py  0006_auto_20190327_1659.py  0007_auto_20190401_1915.py  0008_auto_20190401_1929.py  0009_auto_20190401_1930.py  0010_token_valid.py  0011_token_active.py  0012_remove_token_active.py  0013_remove_user_login_type.py
